# data-pipelines-with-apache-airflow

./: .envrc  .gitignore  README_HUN.md  pyproject.toml  tags
airflowbook/dags/: branch05.py  listing04.py  unscheduled0301.py
airflowbook/operators/: op.py
chapter01/: docker-compose.yml
chapter01/dags/: 01_umbrella.py  01_younlee.py
chapter01/tests/dags/: test_dag_integrity.py
chapter02/: docker-compose.yml
chapter03/: docker-compose.yml
chapter03_younlee/: docker-compose.yml
chapter03_younlee/dags/: 01_unscheduled.py
chapter03_younlee/docker/events-api/: requirements.txt
chapter03_younlee/tests/: conftest.py
chapter03_younlee/tests/dags/: test_bash_operator.py  test_unscheduled0301.py
chapter04/: docker-compose.yml
chapter04_younlee/tests/: conftest.py
chapter04_younlee/tests/dags/: test_branch05.py  test_listing04.py
chapter05/: docker-compose.yml
chapter06/: docker-compose.yml
chapter07/insideairbnb/: docker-compose.yml
chapter08/: docker-compose.yml
chapter09/tests/: conftest.py
chapter10/docker/: docker-compose.yml
chapter10/kubernetes/: docker-compose.yml
chapter11/: docker-compose.yml
chapter12/: docker-compose.yml
chapter13/ldap/: docker-compose.yml
chapter13/rbac/: docker-compose.yml
chapter13/secretsbackend/: docker-compose.yml
chapter13/webserver_theme/: docker-compose.yml
chapter14/: docker-compose.yml
chapter16/: docker-compose.yml
chapter17/: docker-compose.yml
chapter18/: docker-compose.yml
test_airflow_home/: airflow.cfg  airflow.db
test_airflow_home/test_airflow_home/: airflow.db
(+2 files in other folders)
