[tool.poetry]
name = "data-pipelines-with-apache-airflow"
version = "0.1.0"
description = ""
authors = ["resoliwan <resoliwan@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
mypy = "^0.971"
flake8 = "^5.0.4"
pylint = "^2.15.3"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
